# 2d-racer-game-and-rl-agent

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.cursor/plans/: racing_game_logic_6f05180a.plan.md
src/: README.md
src/cpp/: main.cpp
src/cpp/engine/: coordinates.h  rectangle_obb.h  vector.h
src/cpp/engine/collision/: README.md  collision.cpp  collision.h
src/cpp/entity/: car.cpp  car.h
src/cpp/entity/car/: car.cpp  car.h
src/cpp/entity/curve/: circular_curve.cpp  circular_curve.h  curve.cpp  curve.h  rounded_rectangle_curve.cpp  rounded_rectangle_curve.h
src/cpp/interaction/: synchronizer.h
src/cpp/interaction/car/: synchronizer.h
src/cpp/interaction/car/export/: base_car_state_exporter.h  console_car_state_exporter.h  shm_car_state_exporter.h
src/cpp/interaction/car/input/: base_car_input_handler.h  centerline_car_input_handler.h  keyboard_car_input_handler.h  shm_car_input_handler.h
src/cpp/interaction/export/: console_car_state_exporter.h  shm_game_state_exporter.h
src/cpp/interaction/input/: base_car_input_handler.h  centerline_car_input_handler.h  shm_car_input_handler.h
src/cpp/interaction/ipc/: shared_memory.h
src/cpp/race/: hud.cpp  hud.h  race_manager.cpp  race_manager.h  track_progress.cpp  track_progress.h
src/python/: __init__.py  env.py  play.py  run.py  run_manual.py  run_rl_dummy.py  shm_state.py  train.py
src/python/shm/: __init__.py  accessor.py  constants.py  schema.py  utils.py
src/python/test_scripts/: run_manual.py  run_rl_dummy.py
